plugins {
	id 'org.springframework.boot' version '2.7.4'
	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
	id 'java'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

jar {
	enabled = false
}

dependencies {

	// 로그인 관련 ---------------------------------
	implementation 'org.springframework.boot:spring-boot-starter-security' // Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' //OAuth
	implementation 'com.google.api-client:google-api-client:1.30.10' //Google Client API
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2' // JWT
		// 로그인과 관련 없으나 확인용
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // thymeleaf

	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2' // JWT
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2' //JWT
	//--------------------------------------------
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.h2database:h2'
	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
	implementation 'com.google.code.findbugs:jsr305:3.0.2'
	implementation 'commons-io:commons-io:2.6'

	compileOnly 'org.projectlombok:lombok'

    implementation 'junit:junit:4.13.1'
    compileOnly 'com.fasterxml.jackson.core:jackson-databind'

	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
